Android: crash with forced decoding
With forced decoding, :no-mediacodec-dr
is added to the media options, leading to the following null pointer deref.
Thread 37 "VlcObject" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 31514.31648]
AndroidPictureContextRelease (apctx=<optimized out>, render=false) at ../../modules/codec/omxil/mediacodec.c:509
509 decoder_sys_t *p_sys = avctx->dec_opaque;
(gdb) bt
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) AndroidPictureContextRelease (apctx=<optimized out>, render=false) at ../../modules/codec/omxil/mediacodec.c:509
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) ReleaseAllPictureContexts (p_sys=0x7d6f569c00) at ../../modules/codec/omxil/mediacodec.c:580
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) Video_OnFlush (p_dec=<optimized out>) at ../../modules/codec/omxil/mediacodec.c:1781
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x0000007d728fcebc in DecodeFlushLocked (p_dec=0x7d9004fd00) at ../../modules/codec/omxil/mediacodec.c:1327
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x0000007d728fc258 in DecodeFlush (p_dec=0x7d9004fd00) at ../../modules/codec/omxil/mediacodec.c:1346
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x0000007d72a0640c in DecoderThread_Flush (p_owner=0x7d9004fd00) at ../../src/input/decoder.c:1489
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) DecoderThread (p_data=0x7d9004fd00) at ../../src/input/decoder.c:1647
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x0000007e1505a030 in __pthread_start(void*) () from /home/alexandre/workspace/videolabs/vlc-android/libvlc/.gdb/obj/local/arm64-v8a/system/lib64/libc.so
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x0000007e14feb8f4 in __start_thread () from /home/alexandre/workspace/videolabs/vlc-android/libvlc/.gdb/obj/local/arm64-v8a/system/lib64/libc.so
Detaching from program: /home/alexandre/workspace/videolabs/vlc-android/libvlc/.gdb/obj/local/arm64-v8a/system/bin/app_process64, process 31514
Remote connection closed