mediacodec: fix crash with --no-mediacodec-dr

The android picture contexts are not initialized when mediacodec-dr has
been disabled, since it's done at the creation of the video context.
Since we don't have android picture, it's indeed expected that we don't
need to release their context.

Fix #24698